# mpc-bulletproof

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: test.yml
benches/: generators.rs  inner_product.rs  linear_proof.rs  r1cs.rs  range_proof.rs
docs/: r1cs-docs-example.md
integration/: helpers.rs  main.rs  mpc_inner_product.rs  mpc_prover.rs  transcript.rs
src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  transcript.rs  util.rs
src/r1cs/: constraint_system.rs  linear_combination.rs  mod.rs  proof.rs  prover.rs  verifier.rs
src/r1cs_file/: mod.rs  parser.rs  sections.rs
src/r1cs_mpc/: authenticated_poly.rs  constraint_system.rs  mod.rs  mpc_constraint_system.rs  mpc_inner_product.rs  mpc_linear_combination.rs  mpc_prover.rs  proof.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: mpc_r1cs.rs  r1cs.rs  range_proof.rs
