[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - ensure yoloproofs was disabled in an atomic (revertable) commit
# - update CHANGELOG
version = "2.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
mpc-ristretto = { git = "https://github.com/renegade-fi/MPC-Ristretto" }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.8", default-features = false }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
clear_on_drop = { version = "0.2", default-features = false, features = ["nightly"] }

[dev-dependencies]
bincode = "1"
clap = { version = "3.2.8", features = ["derive"] }
colored = "2"
criterion = "0.3"
dns-lookup = "1.0"
hex = "0.3"
inventory = "0.3"
rand_chacha = "0.2"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }

[features]
default = ["std", "avx2_backend", "multiprover"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
std = ["rand", "rand/std", "thiserror"]
multiprover = []
integration_test = []

[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required_features = ["integration_test"]

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs"]

[[bench]]
name = "linear_proof"
harness = false

