[package]
name = "mpc-bulletproof"
version = "0.1.0"
authors = [
    "Joey Kraut <joey@renegade.fi>",
    "Andrew Kirillov <andrew@renegade.fi>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/renegade-fi/mpc-bulletproof"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "stark", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of collaboratively proved Bulletproofs over the Stark curve."
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-serialize = "0.4"
futures = "0.3"
futures-util = "0.3"
mpc-stark = "0.2.1"
sha3 = { version = "0.8", default-features = false }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true }
rayon = "1"
byteorder = { version = "1", default-features = false }
num-bigint = "0.4"
itertools = "0.10"
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
merlin = { git = "https://github.com/renegade-fi/merlin" }
unzip-n = "0.1"

[dev-dependencies]
async-std = "1.12"
async-trait = "0.1"
bincode = "1"
clap = { version = "3.2.8", features = ["derive"] }
colored = "2"
criterion = "0.3"
dns-lookup = "1.0"
hex = "0.3"
inventory = "0.3"
rand_chacha = "0.2"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"

[features]
default = ["std", "multiprover"]
benchmarking = []
std = ["rand", "rand/std", "thiserror"]
multiprover = []
integration_test = []

[[test]]
name = "r1cs"

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "shuffle"
harness = false
required-features = ["multiprover"]

[[bench]]
name = "r1cs"
harness = false

[[bench]]
name = "inner_product"
harness = false
